--- a/r4babs1/week-9/overview.qmd
+++ b/r4babs1/week-9/overview.qmd
@@ -5,13 +5,21 @@ toc: true
 toc-location: right
 ---
 
-Last week you summarised and plotted data sets with one variable. This week you will start plotting data sets with more than one variable. This means you need to be able determine which variable is the response and which is the explanatory. You will find out what is meant by "tidy" data and how to perform a simple data tidying task. Finally you will discover how to save your figures to file.
+Last week you summarised and plotted data sets with one variable. This
+week you will start plotting data sets with more than one variable. This
+means you need to be able determine which variable is the response and
+which is the explanatory. You will find out what is meant by "tidy" data
+and how to perform a simple data tidying task. Finally you will discover
+how to save your figures to file.
 
 ### Learning objectives
 
--   summarise and plot, appropriately, datasets with more than one variable
--   recognise that variables can be categorised by their role in analysis
--   explain what is meant by 'tidy' data and be able to perform some data tidying tasks.
+-   summarise and plot, appropriately, datasets with more than one
+    variable
+-   recognise that variables can be categorised by their role in
+    analysis
+-   explain what is meant by 'tidy' data and be able to perform some
+    data tidying tasks.
 -   save figures to file by scripting
 
 ### Instructions
@@ -24,7 +32,8 @@ Last week you summarised and plotted data sets with one variable. This week you 
 
     i.  💻 Summarise and plot datasets with more than one variable.
 
-    ii. 💻 Practice with working directories, importing data, formatting figures and the pipe
+    ii. 💻 Practice with working directories, importing data, formatting
+        figures and the pipe
 
     iii. 💻 Script saving figures to file for reproducibility
 
@@ -32,4 +41,5 @@ Last week you summarised and plotted data sets with one variable. This week you 
 
     i.  💻 Summarise and plot a dataframe from the workshop
 
-    ii. 💻 Practice the complete RStudio Project worklfow for a new dataset
+    ii. 💻 Practice the complete RStudio Project worklfow for a new
+        dataset
